[package]
authors = ["Zoe Kahala <>"]
description = "Discord & Twitch combined bot for Courtesy Call Gaming."
keywords = ["discord", "twitch", "api"]
name = "ccg_bot"
readme = "README.md"
license = "EUPL-1.2"
repository = "https://github.com/ZoeS17/CCG_Bot.git"
version = "0.0.1"
edition = "2021"
include = ["LICENSE.md", "README.md"]
publish = false
rust-version = "1.60"

[dependencies]
async-trait = "0.1"
colored = { version = "2", optional = true }
dyn_struct = "0.3.2"
form_urlencoded = { version = "1.1.0", optional = true }
governor = "0.5"
hyper = { version = "0.14", features = ["http1", "server"] }
lazy_static = "1.4"
once_cell = "1.17"
nom = "7.0"
nonzero_ext = "0.3"
pkg-version = "1.0"
prometheus = "0.13"
#rillrate = "0.41"#This seems to cause issues when notify is 5.0.0 and is causing github workflows to fail(need replacement)
#rill-protocol = "0.41"#See above
serde = { version = "1.0", features = ["derive"] }
serde_derive = { version = "1.0" }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.2"
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", optional = true }
text_io = { version = "0.1", optional = true }
tiny_http = { version = "0.12", optional = true }
tldextract = "0.6"
toml = "0.5.9"
tower = { version = "0.4", features = ["limit"] }
webbrowser = "0.8"

[dependencies.libghirahim]
git = "https://github.com/zoes17/ghirahim_rs.git"
rev = "7177e1f"
optional = true

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["cache", "client", "gateway", "model", "rustls_backend"]
optional = true

[dependencies.tokio]
version = "1.20"
features = ["full"]

[dependencies.twitch-irc]
version = "5.0"
features = ["__refreshing-token", "async-tungstenite", "bytes", "metrics-collection", "prometheus", "refreshing-token-rustls-webpki-roots", "reqwest", "serde", "tokio-native-tls", "tokio-stream", "tokio-util", "transport-tcp", "transport-tcp-native-tls", "transport-ws", "transport-ws-rustls-webpki-roots", "with-serde"]
optional = true

[dev-dependencies]
bitflags = "1.3.2"
dashmap = { version = "5.1.0", features = ["serde"]}
tokio-test = "*"

[profile.dev]
opt-level = 3
debug = 2
codegen-units = 64
incremental = true

[features]
default = ["discord"]
discord = ["serenity"]
full = ["discord", "twitch"]
twitch = ["twitch-irc", "libghirahim"]
