[package]
authors = ["Zoe Kahala <>"]
description = "Discord & Twitch combined bot for Courtesy Call Gaming."
keywords = ["discord", "twitch", "api"]
name = "ccg_bot"
readme = "README.md"
license = "EUPL-1.2"
repository = "https://github.com/ZoeS17/CCG_Bot.git"
version = "0.0.1"
edition = "2021"
include = ["LICENSE.md", "README.md"]
publish = false
rust-version = "1.74"

[dependencies]
async-trait = "0.1"
ccg_bot_sys = { version = "0.1.0", path = "../ccg_bot_sys"}
chrono = { version = "0.4", default-features = false }
governor = "0.6"
lazy_static = "1.4"
nom = "7.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = { version = "1.0" }
serde_json = "1.0"
serde_path_to_error = "0.1.11" #from twitch_api
#small-fixed-array = { git = "https://github.com/GnomedDev/small-fixed-array", features = ["serde", "log_using_tracing"] }
tempfile = "3.2"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.5.9"
twitch_oauth2 = { version = "0.12.4", features = ["client", "reqwest"] }
rocket = "0.5.0"
open = "5.0.0"
twitch_api = { version = "0.7.0-rc.7", default-features = false, features = ["client", "eventsub", "helix", "reqwest", "typed-builder"] }
once_cell = { version = "1.18.0", default-features = false }
tokio-websockets = { version = "0.4.0", features = ["openssl", "server"] }

[dependencies.diesel]
version = "2.1.1"
default-features = false
features = ["32-column-tables", "mysql", "without-deprecated"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.serenity]
#git = "https://github.com/serenity-rs/serenity"
version = "0.12"
#branch = "next" # update as soon as possible to 0.12
default-features = false
features = ["cache", "client", "gateway", "model", "rustls_backend"]
optional = true

[dependencies.tokio]
version = "1.20"
features = ["full"]

[dependencies.twitch-irc]
git = "https://github.com/robotty/twitch-irc-rs"
version = "5.0" #update as soon as possible to include the below rev in an actual version
#rev = "2e3e36b"
features = ["__refreshing-token", "async-tungstenite", "bytes", "prometheus", "refreshing-token-rustls-webpki-roots", "reqwest", "serde", "tokio-native-tls", "tokio-stream", "tokio-util", "transport-tcp", "transport-tcp-native-tls", "transport-ws", "transport-ws-rustls-webpki-roots", "with-serde"]
optional = true

[dev-dependencies]
bitflags = "2.0.0"
dashmap = { version = "6.0.0", features = ["serde"]}
tokio-tungstenite = "*"
tokio-test = "*"

[dev-dependencies.futures]
version = "0.3"
default-features = false
features = ["std"]


[features]
default = ["discord", "twitch"]
discord = ["serenity"]
full = ["discord", "twitch"]
twitch = ["twitch-irc"]
unstable-discord-api = []
