[package]
authors = ["Zoe Kahala <>"]
description = "Discord & Twitch combined bot for Courtesy Call Gaming."
keywords = ["discord", "twitch", "api"]
name = "ccg_bot"
readme = "README.md"
license = "EUPL-1.2"
repository = "https://github.com/ZoeS17/CCG_Bot.git"
version = "0.0.1"
edition = "2021"
include = ["LICENSE.md", "README.md"]
publish = false
rust-version = "1.78"

[dependencies]
async-trait = "0.1"
ccg_bot_sys = { version = "0.1.0", path = "../ccg_bot_sys"}
chrono = { version = "0.4", default-features = false }
color-eyre = { version = "0.6.3", features = ["capture-spantrace"] }
console-subscriber = "0.2.0"
eyre = "0.6.12"
governor = "0.6"
http = "0.2.12"
lazy_static = "1.4"
once_cell = { version = "1.18.0", default-features = false }
open = "5.0.0"
nom = "7.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = { version = "1.0" }
serde_json = { version = "1.0", features = ["std"]}
serde_path_to_error = "0.1.11" #from twitch_api
#small-fixed-array = { git = "https://github.com/GnomedDev/small-fixed-array", features = ["serde", "log_using_tracing"] }
tempfile = "3.2"
tokio-websockets = { version = "0.4.0", features = ["openssl", "server"] }
toml = "0.5.9"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twitch_oauth2 = { version = "0.12.4", features = ["client", "reqwest"] }
url = "2.5.0"
twitch_types = { version = "0.4.5", features = ["serde"] }

[dependencies.diesel]
version = "2.2.3"
default-features = false
features = ["32-column-tables", "mysql", "without-deprecated"]

[dependencies.futures]
version = "0.3"
default-features = false
features = ["std"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.rocket]
version = "0.5.0"
features = ["tls"]

[dependencies.serenity]
#git = "https://github.com/serenity-rs/serenity"
version = "0.12"
#branch = "next" # update as soon as possible to 0.12
default-features = false
features = ["cache", "client", "gateway", "model", "rustls_backend"]
# optional = true

[dependencies.tokio]
version = "1.20"
features = ["full", "tracing"]

[dependencies.tokio-tungstenite]
version = "*"
features = ["rustls-tls-webpki-roots"]

[dependencies.twitch-irc]
git = "https://github.com/robotty/twitch-irc-rs"
default-features = false
version = "5.0"
features = ["bytes", "prometheus", "refreshing-token-rustls-webpki-roots", "tokio-rustls", "tokio-stream", "tokio-util", "transport-tcp-rustls-webpki-roots", "transport-ws-rustls-webpki-roots", "with-serde"]
# optional = true

[dependencies.twitch_api]
version = "0.7.0-rc.7"
default-features = false
features = ["eventsub", "helix", "reqwest", "tracing", "typed-builder"]
# optional = true

[dev-dependencies]
bitflags = "2.0.0"
dashmap = { version = "6.0.1", features = ["serde"]}
tokio-test = "*"


[features]
# default = ["discord", "twitch"]
# discord = ["serenity"]
# full = ["discord", "twitch"]
# twitch = ["twitch-irc", "twitch_api"]
unstable-discord-api = []
