[package]
authors = ["Zoe Kahala <>"]
name = "ccg_bot_sys"
license = "EUPL-1.2"
repository = "https://github.com/ZoeS17/CCG_Bot.git"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
quote = "1"

[dependencies.syn]
version = "1"
features = ["derive", "full"]

[dev-dependencies]
trybuild = "1"

[lib]
name = "ccg_bot_sys"
path = "src/lib.rs"
proc-macro = true
